<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AddRelatedToFragment">

    <TextView
        android:id="@+id/channel_related"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:text="@string/to_what_does_the_channel_relate"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:drawableEndCompat="@drawable/ic_close_24"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_criteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/search_criteria"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channel_related" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_background"
        android:gravity="center_vertical"
        android:hint="@string/markou"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_criteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_criteria"
        app:layout_constraintTop_toTopOf="@id/search_criteria" />

    <TextView
        android:id="@+id/type_of_criteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/type_of_criteria"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_criteria" />

    <EditText
        android:id="@+id/type_of_criteria_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_background"
        android:hint="@string/prospective_customers"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/type_of_criteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/type_of_criteria"
        app:layout_constraintTop_toTopOf="@id/type_of_criteria" />

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/create_button_background"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/create_your_own"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_of_criteria" />

    <TextView
        android:id="@+id/create_your_own"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/create_button_background"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/create_your_own"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <TextView
        android:id="@+id/search_result"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_blue"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:text="@string/search_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <ListView
        android:id="@+id/searched_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_result" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/connect_to_channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connect_to_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/create_button_background"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/connect_the_selection_s_to_the_channel"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>