<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.dialog.CreateYourOwnDialog">

    <TextView
        android:id="@+id/create_your_own"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:text="@string/create_your_own"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        android:padding="8dp"
        android:src="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_blue" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_your_own" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@null"
        android:hint="@string/price_list"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1" />

    <TextView
        android:id="@+id/connect_to_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/create_button_background"
        android:layout_marginBottom="50dp"
        android:paddingStart="48dp"
        android:paddingTop="8dp"
        android:paddingEnd="48dp"
        android:paddingBottom="8dp"
        android:text="@string/connect_it_to_the_channel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>